--- a/PhotoAlbumTests/PhotoAlbumTests.csproj
+++ b/PhotoAlbumTests/PhotoAlbumTests.csproj
@@ -54,6 +54,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="AlbumTest.cs" />
+    <Compile Include="RandomObjects.cs" />
     <Compile Include="PhotoTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TagTest.cs" />
